mm: add config for default readahead size
Change the VM_MAX_READAHEAD value from the default 64KB to a
configurable value. This will allow the readahead window to grow to a
maximum size bigger than 128KB, which greatly benefits to sequential
read throughput and thus boot performance.

Change-Id: Iad448cf1198056de46654dcb409466802b3b908d
Signed-off-by: Wei Wang <wvw@google.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -173,3 +173,6 @@ CONFIG_NTFS_RW=y
 ## CFS_BANDWITH - can makes too much cpu's thrrottling
 # CONFIG_CFS_BANDWIDTH is not set
 
+## VM MAX READAHEAD
+CONFIG_VM_MAX_READAHEAD=256
+
