--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -858,3 +858,12 @@ config FAULT_AROUND_4KB
 	default n
 	help
 	  Reduce fault around bytes to 4KB
+
+config VM_MAX_READAHEAD
+	int "Default max readahead window size"
+	default 64
+	help
+	  This sets the VM_MAX_READAHEAD value to allow the readahead window
+	  to grow to a maximum size of configured. This will benefit sequential
+	  read throughput and thus early boot performance.
+
