cpufreq: blu_schedutil: Introduce initial bringup
Import from linux 4.9 android-common plus additional changes and fixes

Signed-off-by: engstk <eng.stk@sapo.pt>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -54,6 +54,9 @@ CONFIG_TCP_CONG_CUBIC=y
 ## TCP WINDOW 64kb
 CONFIG_LARGE_TCP_INITIAL_BUFFER=y
 
+## EAS CPU GOVERNORS
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+
 ## I/O SCHEDULERS
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_FIOPS=y
