--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -330,3 +330,8 @@ source "fs/nls/Kconfig"
 source "fs/dlm/Kconfig"
 
 endmenu
+
+config BLOCK_UNWANTED_FILES
+	bool "Allow blocking files from executing from kernel"
+	help
+	  This option allows you to forbid executing files from certain folders.
