ts defconfig: added POWERSUSPEND
Signed-off-by: ThunderStorms21th nalas <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -24,6 +24,10 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_MQ_IOSCHED_KYBER is not set
 # CONFIG_CC_WERROR is not set
 
+## POWERSUSPEND
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
+
 ## WAKELOCKS
 CONFIG_BOEFFLA_WL_BLOCKER=y
 
