--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -62,8 +62,8 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_ANXIETY=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_SCSI_MQ_DEFAULT=y
+## CONFIG_IOSCHED_BFQ=y
+## CONFIG_SCSI_MQ_DEFAULT=y
 
 ## STORAGE MASS
 ## CONFIG_USB_F_MASS_STORAGE=y
