--- a/arch/arm64/configs/exynos9820-d1xks_defconfig
+++ b/arch/arm64/configs/exynos9820-d1xks_defconfig
@@ -741,7 +741,7 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_FREQVAR_TUNE=y
+# CONFIG_FREQVAR_TUNE is not set
 
 #
 # CPU frequency scaling drivers
