--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -56,8 +56,8 @@ CONFIG_LARGE_TCP_INITIAL_BUFFER=y
 
 ## EAS CPU GOVERNORS
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
-CONFIG_CPU_FREQ_GOV_Runutil=y
-CONFIG_CPU_FREQ_GOV_PIXEL_SCHEDUTIL=y
+# CONFIG_CPU_FREQ_GOV_Runutil is not set
+# CONFIG_CPU_FREQ_GOV_PIXEL_SCHEDUTIL is not set
 # CONFIG_FREQVAR_TUNE is not set
 
 ## I/O SCHEDULERS
