ts_schedutil - some fixes and make ts_schedutil as default
ts_schedutil + schedutil - can be run at the same time
(use the same functions, and dt declarations)
so one of them must be disabled.

Signed-off-by: ThunderStorms21th nalas <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -55,8 +55,11 @@ CONFIG_TCP_CONG_CUBIC=y
 CONFIG_LARGE_TCP_INITIAL_BUFFER=y
 
 ## EAS CPU GOVERNORS
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_TS_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_TS_SCHEDUTIL=y
+# CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
 # CONFIG_CPU_FREQ_GOV_Runutil is not set
 # CONFIG_CPU_FREQ_GOV_PIXEL_SCHEDUTIL is not set
 # CONFIG_FREQVAR_TUNE is not set
