ts-config: Make zsmalloc copy rather than mapping pages
VM mapping is ~5x slower than simply copying memory to access
cross-page allocations on both our little and big cluster CPUs.

	zsmalloc copy	zsmalloc vmap
cpu0	1456637		255254
cpu1	1463270	    	243098
cpu2	1441192		242113
cpu3	1446096	    	269415
cpu4	1830798		486465
cpu5	2703679	    	641879
cpu6	2568903		642474
cpu7	2128928	    	480830

Little 10kmaps	145	25	(slowdown: 5.8x)
Big 10kmaps	231	56	(slowdown: 4.1x)

diepquynh: the tests above were done with a Snapdragon 835 device

org commit : https://github.com/diepquynh/android_kernel_samsung_universal8895/commit/312933bc960b9de3e60ca04b4c636635a2e9025a

Signed-off-by: Danny Lin <danny@kdrag0n.dev>

Signed-off-by: ThunderStorms21th nalas <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -23,6 +23,7 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_MQ_IOSCHED_DEADLINE is not set
 # CONFIG_MQ_IOSCHED_KYBER is not set
 # CONFIG_CC_WERROR is not set
+# CONFIG_PGTABLE_MAPPING is not set
 
 ## POWERSUSPEND
 CONFIG_POWERSUSPEND=y
