--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -24,6 +24,7 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_MQ_IOSCHED_KYBER is not set
 # CONFIG_CC_WERROR is not set
 # CONFIG_PGTABLE_MAPPING is not set
+# CONFIG_EXYNOS_SNAPSHOT_DM is not set
 
 ## POWERSUSPEND
 CONFIG_POWERSUSPEND=y
