ts-config: Disable CRYPTO_TEST
It breaks crypto usage with upstream

org commit: https://github.com/diepquynh/android_kernel_samsung_universal8895/commit/3fdf894fa4c5b72516a75e08d054033e637fb243

Signed-off-by: Diep Quynh <remilia.1505@gmail.com>

Signed-off-by: ThunderStorms21th nalas <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -25,6 +25,7 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CC_WERROR is not set
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_EXYNOS_SNAPSHOT_DM is not set
+# CONFIG_CRYPTO_TEST is not set
 
 ## POWERSUSPEND
 CONFIG_POWERSUSPEND=y
