--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -7,8 +7,8 @@
 # CONFIG_PROCA is not set
 # CONFIG_SECURITY_DSMS is not set
 # CONFIG_KPERFMON is not set
-# CONFIG_MALI_KUTF is not set
-CONFIG_LOCALVERSION="-ThunderStorms"
+CONFIG_MALI_KUTF=y
+CONFIG_LOCALVERSION="-$KERNEL_VERSION"
 CONFIG_MALI_GATOR_SUPPORT=y
 CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
