ts-config: disable CONFIG_LOCALVERSION_AUTO
Signed-off-by: ThunderStorms21th nalas <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -9,6 +9,7 @@
 # CONFIG_KPERFMON is not set
 CONFIG_MALI_KUTF=y
 CONFIG_LOCALVERSION="-$KERNEL_VERSION"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_MALI_GATOR_SUPPORT=y
 CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
