--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -132,3 +132,23 @@ CONFIG_COMPAT_VDSO=y
 ## ZSMALLOG mapping
 # CONFIG_PGTABLE_MAPPING is not set
 
+## CIFS
+CONFIG_CIFS=y
+# CONFIG_CIFS_STATS is not set
+CONFIG_CIFS_ALLOW_INSECURE_LEGACY=y
+# CONFIG_CIFS_WEAK_PW_HASH is not set
+# CONFIG_CIFS_UPCALL is not set
+# CONFIG_CIFS_XATTR is not set
+CONFIG_CIFS_DEBUG=y
+# CONFIG_CIFS_DEBUG2 is not set
+# CONFIG_CIFS_DEBUG_DUMP_KEYS is not set
+# CONFIG_CIFS_DFS_UPCALL is not set
+# CONFIG_CIFS_SMB311 is not set
+CONFIG_CRYPTO_CCM=y
+CONFIG_CRYPTO_MD4=y
+
+## NTFS R/W
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
+
