--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -111,18 +111,18 @@ config CPU_FREQ_DEFAULT_GOV_SCHEDUTIL
 	  governor will be 'performance'.
 
 config CPU_FREQ_DEFAULT_GOV_TS_SCHEDUTIL
-	bool "ts-schedutil"
+	bool "ts_schedutil"
 	depends on SMP
 	select CPU_FREQ_GOV_TS_SCHEDUTIL
 	help
-	  Use the 'ts-schedutil' CPUFreq governor by default. If unsure,
+	  Use the 'ts_schedutil' CPUFreq governor by default. If unsure,
 	  have a look at the help section of that governor. The fallback
 	  governor will be 'performance'.
 
 config CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL
 	bool "blu_schedutil"
 	select CPU_FREQ_GOV_BLU_SCHEDUTIL
-	select CPU_FREQ_GOV_PERFORMANCE
+	select CPU_FREQ_GOV_TS_SCHEDUTIL
 	help
 	  Use the 'blu_schedutil' CPUFreq governor by default. If unsure,
 	  have a look at the help section of that governor. The fallback
@@ -132,7 +132,7 @@ config CPU_FREQ_DEFAULT_GOV_Runutil
 	bool "Runutil"
 	depends on SMP
 	select CPU_FREQ_GOV_Runutil
-	select CPU_FREQ_GOV_PERFORMANCE
+	select CPU_FREQ_GOV_TS_SCHEDUTIL
 	help
 	  Use the 'Runutil' CPUFreq governor by default. If unsure,
 	  have a look at the help section of that governor. The fallback
@@ -142,7 +142,7 @@ config CPU_FREQ_DEFAULT_GOV_PIXEL_SCHEDUTIL
 	bool "pixel_schedutil"
 	depends on SMP
 	select CPU_FREQ_GOV_PIXEL_SCHEDUTIL
-	select CPU_FREQ_GOV_PERFORMANCE
+	select CPU_FREQ_GOV_TS_SCHEDUTIL
 	help
 	  Use the 'pixel_schedutil' CPUFreq governor by default. If unsure,
 	  have a look at the help section of that governor. The fallback
@@ -247,7 +247,7 @@ config CPU_FREQ_GOV_SCHEDUTIL
 	  If in doubt, say N.
 
 config CPU_FREQ_GOV_TS_SCHEDUTIL
-	bool "'ts-schedutil' cpufreq policy governor"
+	bool "'ts_schedutil' cpufreq policy governor"
 	depends on CPU_FREQ && SMP
 	select CPU_FREQ_GOV_ATTR_SET
 	select IRQ_WORK
@@ -265,7 +265,7 @@ config CPU_FREQ_GOV_TS_SCHEDUTIL
 
 config FREQVAR_TUNE
 	bool "CPU frequency variant tuner"
-	depends on SCHED_EMS && CPU_FREQ_GOV_SCHEDUTIL
+	depends on SCHED_EMS && CPU_FREQ_GOV_TS_SCHEDUTIL
 	help
 	  This option provides the controller which tunes system performance
 	  as frequency variant.
