--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -28,6 +28,16 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_EXYNOS_SNAPSHOT_DM is not set
 # CONFIG_CRYPTO_TEST is not set
 
+## HZ settings
+# CONFIG_HZ_100=y
+# CONFIG_HZ=100
+# CONFIG_HZ_250 is not set
+# CONFIG_HZ=250
+CONFIG_HZ_300=y
+CONFIG_HZ=300
+# CONFIG_HZ_1000=y
+# CONFIG_HZ=1000
+
 ## POWERSUSPEND
 CONFIG_POWERSUSPEND=y
 # CONFIG_POWERSUSPEND_DEBUG is not set
@@ -151,4 +161,7 @@ CONFIG_CRYPTO_MD4=y
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
+
+## STORAGE LOGS
+# CONFIG_BLOCK_SUPPORT_STLOG is not set
 
