kperfmon: nuke warnings
org commit : https://github.com/corsicanu/android_kernel_samsung_universal9820/commit/c5feac1e8713e9e85b5e80d035a9ce66e1846553

Signed-off-by: ThunderStorms21th nalas <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -165,3 +165,6 @@ CONFIG_NTFS_RW=y
 ## STORAGE LOGS
 # CONFIG_BLOCK_SUPPORT_STLOG is not set
 
+## KPERFMON - disable warnings
+# CONFIG_KPERFMON is not set
+
