ts-config: disable CFS_BANDWITH - it make CPU thtrottling
Signed-off-by: ThunderStorms21th nalas <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -170,3 +170,6 @@ CONFIG_NTFS_RW=y
 ## KPERFMON - disable warnings
 # CONFIG_KPERFMON is not set
 
+## CFS_BANDWITH - can makes too much cpu's thrrottling
+# CONFIG_CFS_BANDWIDTH is not set
+
