ts_defconfig: added CONFIG_DISPLAYPORT_DEX_FORCE_WQHD
Signed-off-by: ThunderStorms21th nalas <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -182,3 +182,6 @@ CONFIG_FRANDOM=y
 ## WQ_POWER_EFFICIENT
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
+## DISPLAYPORT_DEX_FORCE_WQHD
+CONFIG_DISPLAYPORT_DEX_FORCE_WQHD=y
+
