ts_defconfig: support FLATMEM
org commit : https://github.com/yarpiin/White-Wolf-Uni-OneUI/commit/312d5aba40b0d5865eb36bb16a91492077e91b84

Signed-off-by: ThunderStorms21th nalas <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -185,3 +185,20 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 ## DISPLAYPORT_DEX_FORCE_WQHD
 CONFIG_DISPLAYPORT_DEX_FORCE_WQHD=y
 
+## STOCKMEM
+# CONFIG_ARCH_HAS_HOLES_MEMORYMODEL is not set
+# CONFIG_SPARSEMEM_MANUAL is not set
+# CONFIG_SPARSEMEM is not set
+# CONFIG_HAVE_MEMORY_PRESENT is not set
+# CONFIG_SPARSEMEM_EXTREME is not set
+# CONFIG_SPARSEMEM_VMEMMAP is not set
+# CONFIG_HAVE_ARCH_KASAN is not set
+# CONFIG_KASAN is not set
+
+## FLATMEM
+CONFIG_ARCH_FLATMEM_ENABLE=y
+CONFIG_FLATMEM_MANUAL=y
+# CONFIG_SPARSEMEM_MANUAL is not set
+CONFIG_FLATMEM=y
+CONFIG_FLAT_NODE_MEM_MAP=y
+
