--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -29,14 +29,14 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CRYPTO_TEST is not set
 
 ## HZ settings
-# CONFIG_HZ_100=y
-# CONFIG_HZ=100
-CONFIG_HZ_250=y
-CONFIG_HZ=250
-# CONFIG_HZ_300=y
-# CONFIG_HZ=300
-# CONFIG_HZ_1000=y
-# CONFIG_HZ=1000
+CONFIG_HZ_100=y
+CONFIG_HZ=100
+# CONFIG_HZ_250 is not set
+## CONFIG_HZ=250
+# CONFIG_HZ_300 is not set
+## CONFIG_HZ=300
+# CONFIG_HZ_1000 is not set
+## CONFIG_HZ=1000
 
 ## POWERSUSPEND
 CONFIG_POWERSUSPEND=y
