[SQUASH]: Introduce new Linux random drivers - SRANDOM by josenk
This commit adds:
1610926205ae2cb9edcb7682109b62787a1bd7e5
30eda1c967cb83489085bb760f08c4325e33ce90
fce153550a19a28cff996c05637eea67377b67fd
b771474d5e0b7a0feaa6ca0a6109d47857f17da1
359acad2686fefc4d362c44c7d009ee6ab79aa3f
f188bf24d5bb402c1b66ccb71fa10a1497ce75ed
aaef3bf0de595b88020408b4e38478e160f33c5c

commit taken from : https://github.com/Jebaitedneko/android_kernel_10or_G-4.9/commits/srandom

Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -177,7 +177,10 @@ CONFIG_NTFS_RW=y
 CONFIG_VM_MAX_READAHEAD=256
 
 ## FRANDOM
-CONFIG_FRANDOM=y
+# CONFIG_FRANDOM is not set
+
+## SRANDOM
+CONFIG_SRANDOM=y
 
 ## WQ_POWER_EFFICIENT
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
