ts_defconig: disable HW_RANDOM when SRANDOM is enabled
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -182,6 +182,18 @@ CONFIG_VM_MAX_READAHEAD=256
 ## SRANDOM
 CONFIG_SRANDOM=y
 
+## HW RANDOM - disabled if SRANDOM is enabled
+# CONFIG_HW_RANDOM is not set
+## CONFIG_HW_RANDOM_TIMERIOMEM is not set
+# CONFIG_HW_RANDOM_CAVIUM is not set
+# CONFIG_HW_RANDOM_EXYNOS_SWD is not set
+
+## DISBALE FIPS
+## CONFIG_EXYRNG_FIPS_COMPLIANCE is not set
+## CONFIG_EXYRNG_FAIL_POLICY_RESET is not set
+## CONFIG_CRYPTO_FIPS is not set
+## CONFIG_FIPS_FMP is not set
+
 ## WQ_POWER_EFFICIENT
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
