ts_defconf: re-enable HW_RANDOM-w/o this till now we get boobloop
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -182,11 +182,11 @@ CONFIG_VM_MAX_READAHEAD=256
 ## SRANDOM
 CONFIG_SRANDOM=y
 
-## HW RANDOM - disabled if SRANDOM is enabled
-# CONFIG_HW_RANDOM is not set
-## CONFIG_HW_RANDOM_TIMERIOMEM is not set
-# CONFIG_HW_RANDOM_CAVIUM is not set
-# CONFIG_HW_RANDOM_EXYNOS_SWD is not set
+## HW RANDOM - disabled if SRANDOM is enabled (we must use this till now - without HW_RANDOM = bootloop)
+CONFIG_HW_RANDOM=y
+# CONFIG_HW_RANDOM_TIMERIOMEM is not set
+CONFIG_HW_RANDOM_CAVIUM=y
+CONFIG_HW_RANDOM_EXYNOS_SWD=y
 
 ## DISBALE FIPS
 ## CONFIG_EXYRNG_FIPS_COMPLIANCE is not set
