--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -29,8 +29,10 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CRYPTO_TEST is not set
 
 ## HZ settings
-CONFIG_HZ_100=y
-CONFIG_HZ=100
+CONFIG_HZ_50=y
+CONFIG_HZ=50
+# CONFIG_HZ_100 is not set
+## CONFIG_HZ=100
 # CONFIG_HZ_250 is not set
 ## CONFIG_HZ=250
 # CONFIG_HZ_300 is not set
