--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -40,6 +40,12 @@ CONFIG_HZ=50
 # CONFIG_HZ_1000 is not set
 ## CONFIG_HZ=1000
 
+## FAIR Scheuler tunables
+CONFIG_PELT_UTIL_HALFLIFE_32=y
+# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_10 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_8 is not set
+
 ## POWERSUSPEND
 CONFIG_POWERSUSPEND=y
 # CONFIG_POWERSUSPEND_DEBUG is not set
