--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -29,6 +29,8 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CRYPTO_TEST is not set
 
 ## HZ settings
+# CONFIG_HZ_25 is not set
+## CONFIG_HZ=25
 CONFIG_HZ_50=y
 CONFIG_HZ=50
 # CONFIG_HZ_100 is not set
