--- a/arch/arm64/boot/dts/exynos/exynos9825.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9825.dts
@@ -9908,7 +9908,7 @@
 				mif-perf {
 					const-type = <0x0>;
 					dm-type = <0x3>;
-					table = <0x202290 0x0 0x1e8c50 0x0 0x1dc130 0x0 0x1c2af0 0x0 0x1a94b0 0x0 0x183350 0x0 0x163780 0x0 0x13d620 0x0 0x11a788 0x0 0x101148 0x0 0xe7b08 0x0 0xc4c70 0x0  0x9eb10 0x0 0x854d0 0x0 0x6be90 0x0 0x55b18 0x0 0x3c4d8 0x0 0x2c6f0 0x0 0x1fbd0 0x0>;
+					table = <0x1dc130 0x0 0x1c2af0 0x0 0x1a94b0 0x0 0x183350 0x0 0x163780 0x0 0x13d620 0x0 0x11a788 0x0 0x101148 0x0 0xe7b08 0x0 0xc4c70 0x0  0x9eb10 0x0 0x854d0 0x0 0x6be90 0x0 0x55b18 0x0 0x3c4d8 0x0 0x2c6f0 0x0 0x1fbd0 0x0>;
 				};
 			};
 		};
