--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -89,6 +89,7 @@ CONFIG_CPU_FREQ_GOV_TS_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_Runutil is not set
 # CONFIG_CPU_FREQ_GOV_PIXEL_SCHEDUTIL is not set
 # CONFIG_FREQVAR_TUNE is not set
+CONFIG_CPU_FREQ_SUSPEND=y
 
 ## I/O SCHEDULERS
 CONFIG_IOSCHED_CFQ=y
