ts_config: update to TS v1.6.2
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -29,10 +29,10 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CRYPTO_TEST is not set
 
 ## HZ settings
-# CONFIG_HZ_25 is not set
-## CONFIG_HZ=25
-CONFIG_HZ_50=y
-CONFIG_HZ=50
+CONFIG_HZ_25=y
+CONFIG_HZ=25
+# CONFIG_HZ_50 is not set
+## CONFIG_HZ=50
 # CONFIG_HZ_100 is not set
 ## CONFIG_HZ=100
 # CONFIG_HZ_250 is not set
@@ -230,4 +230,27 @@ CONFIG_FLATMEM_MANUAL=y
 # CONFIG_SPARSEMEM_MANUAL is not set
 CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
+
+## THERMALL SETTINGS
+CONFIG_THERMAL=y
+CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=0
+CONFIG_THERMAL_HWMON=y
+CONFIG_THERMAL_OF=y
+CONFIG_THERMAL_WRITABLE_TRIPS=y
+CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
+# CONFIG_THERMAL_DEFAULT_GOV_FAIR_SHARE is not set
+# CONFIG_THERMAL_DEFAULT_GOV_USER_SPACE is not set
+# CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR is not set
+# CONFIG_THERMAL_GOV_FAIR_SHARE is not set
+CONFIG_THERMAL_GOV_STEP_WISE=y
+# CONFIG_THERMAL_GOV_BANG_BANG is not set
+# CONFIG_THERMAL_GOV_USER_SPACE is not set
+CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
+CONFIG_CPU_THERMAL=y
+# CONFIG_CLOCK_THERMAL is not set
+# CONFIG_DEVFREQ_THERMAL is not set
+CONFIG_GPU_THERMAL=y
+CONFIG_ISP_THERMAL=y
+CONFIG_THERMAL_EMULATION=y
+# CONFIG_QORIQ_THERMAL is not set
 
