--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -15,6 +15,7 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_ALWAYS_ENFORCE is not set
 # CONFIG_ALWAYS_PERMIT is not set
+# CONFIG_DTC is not set
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
@@ -26,6 +27,8 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CC_WERROR is not set
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_EXYNOS_SNAPSHOT_DM is not set
+# CONFIG_EXYNOS_NPU_PUBLISH_NPU_BUILD_VER is not set
+# CONFIG_VISION_UNITTEST is not set
 # CONFIG_CRYPTO_TEST is not set
 
 ## HZ settings
