--- a/builds/zip-OneUIQ/common/ts/system1/init.custom.rc
+++ b/builds/zip-OneUIQ/common/ts/system1/init.custom.rc
@@ -13,7 +13,7 @@ on property:sys.boot_completed=1
     stop irisd
 
 
-service kernelinit /sbin/ts-kernel.sh
+service kernelinit /system/etc/init/hw/ts-kernel.sh
     # class late_start
     user root
     seclabel u:r:init:s0
