--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -257,3 +257,6 @@ CONFIG_ISP_THERMAL=y
 CONFIG_THERMAL_EMULATION=y
 # CONFIG_QORIQ_THERMAL is not set
 
+## STATE NOTIFIER
+CONFIG_STATE_NOTIFIER=y
+
