ts_config: disable some debug stuff
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -11,6 +11,7 @@ CONFIG_MALI_KUTF=y
 CONFIG_LOCALVERSION="-$KERNEL_VERSION"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_MALI_GATOR_SUPPORT=y
+# CONFIG_MALI_FENCE_DEBUG is not set
 CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_ALWAYS_ENFORCE is not set
@@ -30,6 +31,13 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_EXYNOS_NPU_PUBLISH_NPU_BUILD_VER is not set
 # CONFIG_VISION_UNITTEST is not set
 # CONFIG_CRYPTO_TEST is not set
+# CONFIG_MCPS_DEBUG is not set
+# CONFIG_ARM_EXYNOS_DEVFREQ_DEBUG is not set
+# CONFIG_ION_DEBUG_EVENT_RECORD is not set
+# CONFIG_EXYNOS_DEBUG_TEST is not set
+# CONFIG_HAVE_DEBUG_KMEMLEAK is not set
+# CONFIG_PM_DEBUG is not set
+# CONFIG_PM_SLEEP_DEBUG is not set
 
 ## HZ settings
 CONFIG_HZ_25=y
@@ -180,6 +188,9 @@ CONFIG_CRYPTO_MD4=y
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
+
+## F2FS DEBUG
+# CONFIG_F2FS_SEC_BLOCK_OPERATIONS_DEBUG is not set
 
 ## STORAGE LOGS
 # CONFIG_BLOCK_SUPPORT_STLOG is not set
