ts_config: disabled debuggers, added LLVM_POLLY and ZRAM settings
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/kernel/configs/ts_config.conf
+++ b/kernel/configs/ts_config.conf
@@ -38,6 +38,17 @@ CONFIG_SECURITY_SELINUX_SWITCH=y
 # CONFIG_HAVE_DEBUG_KMEMLEAK is not set
 # CONFIG_PM_DEBUG is not set
 # CONFIG_PM_SLEEP_DEBUG is not set
+# CONFIG_DEBUG_ATOMIC_SLEEP is not set
+## CONFIG_SCHED_DEBUG is not set
+## CONFIG_SAMSUNG_LMKD_DEBUG is not set
+## CONFIG_MMC_DW_DEBUG is not set
+# CONFIG_TOUCHSCREEN_DUMP_MODE is not set
+## CONFIG_CGROUP_DEBUG is not set
+# CONFIG_SLUB_DEBUG is not set
+# CONFIG_CMA_DEBUGFS is not set
+# CONFIG_CMUCAL_DEBUG is not set
+# CONFIG_PHY_EXYNOS_DEBUGFS is not set
+# CONFIG_PHY_EXYNOS_DP_DEBUGFS is not set
 
 ## HZ settings
 CONFIG_HZ_25=y
@@ -99,7 +110,7 @@ CONFIG_CPU_FREQ_GOV_TS_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
 # CONFIG_CPU_FREQ_GOV_Runutil is not set
 # CONFIG_CPU_FREQ_GOV_PIXEL_SCHEDUTIL is not set
-# CONFIG_FREQVAR_TUNE is not set
+CONFIG_FREQVAR_TUNE=y
 # CONFIG_CPU_FREQ_SUSPEND is not set
 
 ## I/O SCHEDULERS
@@ -129,6 +140,7 @@ CONFIG_INITRAMFS_COMPRESSION=""
 # CONFIG_INITRAMFS_COMPRESSION_XZ is not set
 # CONFIG_INITRAMFS_COMPRESSION_LZO is not set
 # CONFIG_INITRAMFS_COMPRESSION_LZ4 is not set
+CONFIG_PROC_MAGISK_HIDE_MOUNT=y
 
 ## SECURE KERNEL
 # CONFIG_LOD_SEC is not set
@@ -159,6 +171,9 @@ CONFIG_WIREGUARD=y
 CONFIG_NET_UDP_TUNNEL=y
 # CONFIG_GENEVE is not set
 # CONFIG_GTP is not set
+
+## DISPLAY LOGS
+# CONFIG_SEC_DEBUG_TSP_LOG is not set
 
 ## VDSO
 CONFIG_COMPAT_VDSO=y
@@ -202,7 +217,12 @@ CONFIG_NTFS_RW=y
 # CONFIG_CFS_BANDWIDTH is not set
 
 ## VM MAX READAHEAD
-CONFIG_VM_MAX_READAHEAD=256
+CONFIG_VM_MAX_READAHEAD=128
+
+## ZRAM
+CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
+CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
+CONFIG_FIX_INACTIVE_RATIO=y
 
 ## FRANDOM
 # CONFIG_FRANDOM is not set
@@ -269,7 +289,11 @@ CONFIG_THERMAL_EMULATION=y
 # CONFIG_QORIQ_THERMAL is not set
 
 ## STATE NOTIFIER
-CONFIG_STATE_NOTIFIER=y
+# CONFIG_STATE_NOTIFIER is not set
 
-## FINGERPRINT BOOST
+## FINGER BOOST
 CONFIG_FINGERPRINT_BOOST=y
+
+## POLLY LLVM
+CONFIG_LLVM_POLLY=y
+
