dts: exynos9820(25) - bring back boost CPUs with GPU freq's
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/boot/dts/exynos/exynos9820.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9820.dts
@@ -5206,7 +5206,7 @@
 		governor = "interactive";
 		interactive_info = <0x3f7a0 0x5e 0x0>;
 		gpu_dvfs_table_size = <0x9 0x8>;
-		gpu_dvfs_table = <0xab630 0x4e 0x64 0x9 0x1fefc8 0x0 0x0 0x0 0x9eb10 0x4e 0x62 0x5 0x1fefc8 0x0 0x0 0x0 0x8ba60 0x4e 0x62 0x5 0x1b5fd0 0x0 0x0 0x0 0x69b68 0x4e 0x5f 0x1 0x14a140 0x0 0x0 0x0 0x5c0a8 0x4e 0x5a 0x1 0x14a140 0x0 0x0 0x0 0x4f588 0x4e 0x55 0x1 0xf78f0 0x0 0x0 0x0 0x3f7a0 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x30d40 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x186a0 0x0 0x55 0x1 0xa50a0 0x0 0x0 0x0>;
+		gpu_dvfs_table = <0xab630 0x4e 0x64 0x9 0x1fefc8 0x163780 0x0 0x1bc560 0x9eb10 0x4e 0x62 0x5 0x1fefc8 0x163780 0x0 0x1fbd00 0x8ba60 0x4e 0x62 0x5 0x1b5fd0 0x0 0x0 0x0 0x69b68 0x4e 0x5f 0x1 0x14a140 0x0 0x0 0x0 0x5c0a8 0x4e 0x5a 0x1 0x14a140 0x0 0x0 0x0 0x4f588 0x4e 0x55 0x1 0xf78f0 0x0 0x0 0x0 0x3f7a0 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x30d40 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x186a0 0x0 0x55 0x1 0xa50a0 0x0 0x0 0x0>;
 		gpu_sustainable_info = <0x69b68 0x5f 0xe7b08 0x19c990 0x7ef40>;
 		gpu_pmqos_cpu_cluster_num = <0x3>;
 		gpu_pmu_status_reg_offset = <0x2104>;
