dts: exynos9820(25)-some changes in CPU's, thermal, BIG_CPU & GPU working
Signed-off-by: ThunderStorms21th <pinakastorm@gmail.com>

--- a/arch/arm64/boot/dts/exynos/exynos9820.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9820.dts
@@ -9678,7 +9678,7 @@
 			emc_mode_0 {
 				mode_name = "QUAD";
 				cpus = "0-7";
-				max_freq = <0x23b4a0>;  // 0x1fbd00
+				max_freq = <0x1fbd00>;  // 0x1fbd00
 				boost_cpus = "6-7";
 				change_latency = <0xf>;
 				enabled = <0x1>;
@@ -9688,7 +9688,7 @@
 				mode_name = "DUAL";
 				cpus = "0-3,6-7";
 				boost_cpus = "6-7";
-				max_freq = <0x29a810>;  // 0x23b4a0
+				max_freq = <0x23b4a0>;  // 0x23b4a0
 				change_latency = <0x1e>;
 				ldsum_thr = <0x4b0>;
 				enabled = <0x1>;
@@ -9696,10 +9696,10 @@
 
 			emc_mode_2 {
 				mode_name = "SINGLE";
-				cpus = "0-3,6";
+				cpus = "0-3,6-7";
 				boost_cpus = [36 00];
 				cal-id = <0xb040004>;
-				max_freq = <0x2e0540>;  // 0x29a810
+				max_freq = <0x29a810>;  // 0x29a810
 				change_latency = <0x1e>;
 				enabled = <0x1>;
 			};
@@ -9711,27 +9711,27 @@
 				domain_name = "LIT";
 				cpus = "0-3";
 				role = <0x0>;
-				cpu_heavy_thr = <0xff>;
+				cpu_heavy_thr = <0xff>;     // 0xff
 				cpu_idle_thr = <0xff>;
-				busy_ratio = <0x41>;
+				busy_ratio = <0x41>;        // 0x41
 			};
 
 			emc_domain_1 {
 				domain_name = "MID";
 				cpus = "4-5";
 				role = <0x1>;
-				cpu_heavy_thr = <0x1f4>;
+				cpu_heavy_thr = <0x12c>;    // 0x1f4
 				cpu_idle_thr = <0xc8>;
-				busy_ratio = <0x0>;
+				busy_ratio = <0x20>;        // 0x0
 			};
 
 			emc_domain_2 {
 				domain_name = "BIG";
 				cpus = "6-7";
 				role = <0x3>;
-				cpu_heavy_thr = <0x28a>;
+				cpu_heavy_thr = <0x163>;    // 0x28a
 				cpu_idle_thr = <0xfa>;
-				busy_ratio = <0x0>;
+				busy_ratio = <0x10>;        // 0x0
 			};
 		};
 	};
@@ -9741,7 +9741,7 @@
 		domain@0 {
 			device_type = "schedutil-domain";
 			shared-cpus = "0-3";
-			enabled = <0x0>;
+			enabled = <0x1>;        // 0x0
 			qos_min_class = <0x3>;
 			linux,phandle = <0x2c5>;
 			phandle = <0x2c5>;
@@ -9773,7 +9773,7 @@
 		domain@0 {
 			device_type = "freqvar-tune";
 			shared-cpus = "0-3";
-			boost_table = <0xa0 0xe7b08 0x7b 0x13d620 0x64>;
+			boost_table = <0xa0 0x11a788 0x7b 0x13d620 0x64>;    // 0xa0 0xe7b08 0x7b 0x13d620 0x64
 			// up_rate_limit_table = <0x4>;
 			// down_rate_limit_table = <0x4>;
 			up_rate_limit_table = "UP_RATE_LIMIT_US";
@@ -9784,7 +9784,7 @@
 		domain@1 {
 			device_type = "freqvar-tune";
 			shared-cpus = "4-5";
-			boost_table = <0xa0 0xeadd0 0x7b 0x12a570 0x64>;
+			boost_table = <0xa0 0x104410 0x7b 0x12a570 0x64>;   // 0xa0 0xeadd0 0x7b 0x12a570 0x64
 			// up_rate_limit_table = <0x4>;
 			// down_rate_limit_table = <0x4>;
 			up_rate_limit_table = "UP_RATE_LIMIT_US";
@@ -9795,7 +9795,7 @@
 		domain@2 {
 			device_type = "freqvar-tune";
 			shared-cpus = "6-7";
-			boost_table = <0xa0 0xe4840 0x7b 0x1506d0 0x64>;
+			boost_table = <0xa0 0x1174c0 0x7b 0x1506d0 0x64>;   // 0xa0 0xe4840 0x7b 0x1506d0 0x64
 			// up_rate_limit_table = <0x4>;
 			// down_rate_limit_table = <0x4>;
 			up_rate_limit_table = "UP_RATE_LIMIT_US";
@@ -9864,7 +9864,7 @@
 			min-limit {
 				ctrl-type = <0x0>;
 				execution-mode = <0x0>;
-				table = <0x2c6f00 0x249f00 0x1dc130 0x2ad8c0 0x249f00 0x1dc130 0x29a810 0x249f00 0x1dc130 0x27ac40 0x249f00 0x1dc130 0x269ad0 0x249f00 0x1dc130 0x25b070 0x249f00 0x1dc130 0x23b4a0 0x249f00 0x1dc130 0x221e60 0x249f00 0x1dc130 0x1fbd00 0x21b8d0 0x0 0x1e26c0 0x21b8d0 0x0 0x1bc560 0x21b8d0 0x0 0x196400 0x21b8d0 0x0 0x17cdc0 0x21b8d0 0x0 0x163780 0x202290 0x0 0x1506d0 0x1e8c50 0x0 0x130b00 0x1b5fd0 0x0 0x1174c0 0x19c990 0x0 0xfde80 0x1702a0 0x0 0xe4840 0x156c60 0x0 0xc7f38 0x12a570 0x0 0xb1bc0 0x104410 0x0 0x98580 0xeadd0 0x0 0x7ef40 0xb8150 0x0>;
+				table = <0x2c6f00 0x249f00 0x202290 0x2ad8c0 0x249f00 0x1e8c50 0x29a810 0x249f00 0x202290 0x27ac40 0x249f00 0x202290 0x269ad0 0x249f00 0x202290 0x25b070 0x249f00 0x202290 0x23b4a0 0x249f00 0x202290 0x221e60 0x249f00 0x202290 0x1fbd00 0x21b8d0 0x0 0x1e26c0 0x21b8d0 0x0 0x1bc560 0x21b8d0 0x0 0x196400 0x21b8d0 0x0 0x17cdc0 0x21b8d0 0x0 0x163780 0x202290 0x0 0x1506d0 0x1e8c50 0x0 0x130b00 0x1b5fd0 0x0 0x1174c0 0x19c990 0x0 0xfde80 0x1702a0 0x0 0xe4840 0x156c60 0x0 0xc7f38 0x12a570 0x0 0xb1bc0 0x104410 0x0 0x98580 0xeadd0 0x0 0x7ef40 0xb8150 0x0>;
 			};
 
 			max-limit-32 {
@@ -9901,7 +9901,7 @@
 				mif-perf {
 					const-type = <0x0>;
 					dm-type = <0x3>;
-					table = <0x1dc130 0x0 0x1c2af0 0x0 0x1a94b0 0x0 0x183350 0x0 0x163780 0x0 0x13d620 0x0 0x11a788 0x0 0x101148 0x0 0xe7b08 0x0 0xc4c70 0x0  0x9eb10 0x0 0x854d0 0x0 0x6be90 0x0 0x55b18 0x0 0x3c4d8 0x0 0x2c6f0 0x0 0x1fbd0 0x0>;
+					table = <0x202290 0x0 0x1e8c50 0x0 0x1dc130 0x0 0x1c2af0 0x0 0x1a94b0 0x0 0x183350 0x0 0x163780 0x0 0x13d620 0x0 0x11a788 0x0 0x101148 0x0 0xe7b08 0x0 0xc4c70 0x0 0x9eb10 0x0 0x854d0 0x0 0x6be90 0x0 0x55b18 0x0 0x3c4d8 0x0 0x2c6f0 0x0 0x1fbd0 0x0>;
 				};
 			};
 		};
@@ -9941,7 +9941,7 @@
 			cal-id = <0xb040004>;
 			dm-type = <0x2>;
 			need-awake;
-			max-freq = <0x2e0540>;
+			max-freq = <0x2c6f00>;
 			min-freq = <0x7ef40>;
 			pm_qos-min-class = <0x7>;
 			pm_qos-max-class = <0x8>;
@@ -9955,7 +9955,7 @@
 				mif-perf {
 					const-type = <0x0>;
 					dm-type = <0x3>;
-					table = <0x2e0540 0x2c6f00 0x2ad8c0 0x2e0540 0x1fefc8 0x2c6f00 0x1fefc8 0x2ad8c0 0x1fefc8 0x29a810 0x1fefc8 0x27ac40 0x1fefc8 0x269ad0 0x1fefc8 0x25b070 0x1fefc8  0x23b4a0 0x1fefc8 0x221e60 0x1fefc8 0x1fbd00 0x0 0x1e26c0 0x0 0x1bc560 0x0 0x196400 0x0 0x17cdc0 0x0 0x163780 0x0 0x1506d0 0x0 0x130b00 0x0 0x1174c0 0x0 0xfde80 0x0 0xe4840 0x0 0xc7f38  0x0 0xb1bc0 0x0 0x98580 0x0 0x7ef40 0x0>;
+					table = <0x2c6f00 0x1fefc8 0x2ad8c0 0x1fefc8 0x29a810 0x1fefc8 0x27ac40 0x1fefc8 0x269ad0 0x1fefc8 0x25b070 0x1fefc8 0x23b4a0 0x1fefc8 0x221e60 0x1fefc8 0x1fbd00 0x0 0x1e26c0 0x0 0x1bc560 0x0 0x196400 0x0 0x17cdc0 0x0 0x163780 0x0 0x1506d0 0x0 0x130b00 0x0 0x1174c0 0x0 0xfde80 0x0 0xe4840 0x0 0xc7f38 0x0 0xb1bc0 0x0 0x98580 0x0 0x7ef40 0x0>;
 				};
 
 				mif-skew {
@@ -10191,8 +10191,8 @@
 		tmu_name = "BIG";
 		id = <0x0>;
 		sensors = <0x7c0>;
-		sensing_mode = "balance";
-		hotplug_enable = <0x1>;
+		sensing_mode = "max";   // balance, max, min
+		hotplug_enable = <0x0>; // 0x1
 		hotplug_in_threshold = <0x5b>;
 		hotplug_out_threshold = <0x60>;
 		#thermal-sensor-cells = <0x0>;
@@ -10263,7 +10263,7 @@
 		tmu_name = "G3D";
 		id = <0x3>;
 		sensors = <0x21e>;
-		sensing_mode = "balance";
+		sensing_mode = "max";   // max, balance, min
 		#thermal-sensor-cells = <0x0>;
 		samsung,tmu_gain = <0x0>;
 		samsung,tmu_reference_voltage = <0x0>;
@@ -10334,7 +10334,7 @@
 				};
 
 				big-switch-on {
-					temperature = <0xd6d8>;
+					temperature = <0xc350>;
 					hysteresis = <0x7d0>;
 					type = "active";
 					linux,phandle = <0x2d2>;
@@ -10342,7 +10342,7 @@
 				};
 
 				big-control-temp {
-					temperature = <0x14438>;
+					temperature = <0xfde8>;
 					hysteresis = <0x1388>;
 					type = "passive";
 					linux,phandle = <0x10d>;
@@ -10350,7 +10350,7 @@
 				};
 
 				big-alert0 {
-					temperature = <0x17318>;
+					temperature = <0x11940>;
 					hysteresis = <0x1388>;
 					type = "active";
 					linux,phandle = <0x2d3>;
@@ -10358,7 +10358,7 @@
 				};
 
 				big-alert1 {
-					temperature = <0x186a0>;
+					temperature = <0x14050>;
 					hysteresis = <0x1388>;
 					type = "active";
 					linux,phandle = <0x2d4>;
@@ -10366,7 +10366,7 @@
 				};
 
 				big-alert2 {
-					temperature = <0x19a28>;
+					temperature = <0x16760>;
 					hysteresis = <0x1388>;
 					type = "active";
 					linux,phandle = <0x2d5>;
@@ -10374,7 +10374,7 @@
 				};
 
 				big-alert3 {
-					temperature = <0x1adb0>;
+					temperature = <0x17ae8>;
 					hysteresis = <0x1388>;
 					type = "active";
 					linux,phandle = <0x2d6>;
@@ -10425,7 +10425,7 @@
 				};
 
 				mid-switch-on {
-					temperature = <0xd6d8>;
+					temperature = <0xcf08>;
 					hysteresis = <0x7d0>;
 					type = "active";
 					linux,phandle = <0x2da>;
@@ -10441,7 +10441,7 @@
 				};
 
 				mid-alert0 {
-					temperature = <0x17318>;
+					temperature = <0x14c08>;
 					hysteresis = <0x1388>;
 					type = "active";
 					linux,phandle = <0x2db>;
@@ -10449,7 +10449,7 @@
 				};
 
 				mid-alert1 {
-					temperature = <0x186a0>;
+					temperature = <0x15f90>;
 					hysteresis = <0x1388>;
 					type = "active";
 					linux,phandle = <0x2dc>;
@@ -10457,7 +10457,7 @@
 				};
 
 				mid-alert2 {
-					temperature = <0x19a28>;
+					temperature = <0x17318>;
 					hysteresis = <0x1388>;
 					type = "active";
 					linux,phandle = <0x2dd>;
@@ -10465,7 +10465,7 @@
 				};
 
 				mid-alert3 {
-					temperature = <0x1adb0>;
+					temperature = <0x186a0>;
 					hysteresis = <0x1388>;
 					type = "active";
 					linux,phandle = <0x2de>;
